--- a/conf/modules.config
+++ b/conf/modules.config
@@ -32,8 +32,10 @@
  * ----------------------------------------------------------------------------------------
  */
 
-// Timestamp for traceability of results
-def trace_timestamp = new Date().format('yyyyMMdd_HHmm')
+// Extract traitfile name and folder structure for better output legibility
+File traitFile = new File(params.traitfile)
+String traitFileName = traitFile.getName() // Extracts the file name
+String traitFolder1DirUp = traitFile.parentFile.name // Extracts one directory up from the trait file
 
 process {
 
@@ -52,8 +54,9 @@ process {
         
         // Define publish directory and saving conditions
         publishDir = [
-            path: { "${params.outdir}/${trace_timestamp}/${workflow.runName}/CT/discovery" },
-            mode: 'copy',
+            path: { "${params.outdir}/CT/discovery/${traitFolder1DirUp}/${traitFileName}" },
+            // I want to dinamically change copy/move ifelse discovery is the only process run
+	    mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
@@ -66,7 +69,7 @@ process {
         
         // Define publish directory and saving conditions
         publishDir = [
-            path: { "${params.outdir}/${trace_timestamp}/${workflow.runName}/CT/resample" },
+            path: { "${params.outdir}/CT/resample/${traitFolder1DirUp}/${traitFileName}" },
             mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -88,7 +91,7 @@ process {
         
         // Define publish directory and saving conditions
         publishDir = [
-            path: { "${params.outdir}/${trace_timestamp}/${workflow.runName}/CT/bootstrap" },
+            path: { "${params.outdir}/CT/bootstrap/${traitFolder1DirUp}/${traitFileName}" },
             mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -102,7 +105,7 @@ process {
         
         // Define publish directory and saving conditions
         publishDir = [
-            path: { "${params.outdir}/${trace_timestamp}/${workflow.runName}/RERConverge/RER_Traits" },
+            path: { "${params.outdir}/RERConverge/RER_Traits/" },
             mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -116,7 +119,7 @@ process {
         
         // Define publish directory and saving conditions
         publishDir = [
-            path: { "${params.outdir}/${trace_timestamp}/${workflow.runName}/RERConverge/RER_Objects" },
+            path: { "${params.outdir}/RERConverge/RER_Objects" },
             mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -129,7 +132,7 @@ process {
         
         // Define publish directory and saving conditions
         publishDir = [
-            path: { "${params.outdir}/${trace_timestamp}/${workflow.runName}/RERConverge/RER_Objects" },
+            path: { "${params.outdir}/RERConverge/RER_Objects" },
             mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -140,13 +143,10 @@ process {
     withName: 'RER_CONT' {
         
         // Define additional arguments
-        ext.args = """${params.rer_minsp}
-        ${params.winsorizeRER}
-        ${params.winsorizeTrait}"""
         
         // Define publish directory and saving conditions
         publishDir = [
-            path: { "${params.outdir}/${trace_timestamp}/${workflow.runName}/RERConverge/RER_Results" },
+            path: { "${params.outdir}/RERConverge/RER_Results" },
             mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
