added rer stuff

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,12 +5,12 @@
 #
 #  ██████╗ ██╗  ██╗██╗   ██╗██╗      ██████╗ ██████╗ ██╗  ██╗███████╗██████╗ ███████╗
 #  ██╔══██╗██║  ██║╚██╗ ██╔╝██║     ██╔═══██╗██╔══██╗██║  ██║██╔════╝██╔══██╗██╔════╝
-#  ██████╔╝███████║ ╚████╔╝ ██║     ██║   ██║██████╔╝███████║█████╗  ██████╔╝█████╗  
-#  ██╔═══╝ ██╔══██║  ╚██╔╝  ██║     ██║   ██║██╔═══╝ ██╔══██║██╔══╝  ██╔══██╗██╔══╝  
+#  ██████╔╝███████║ ╚████╔╝ ██║     ██║   ██║██████╔╝███████║█████╗  ██████╔╝█████╗
+#  ██╔═══╝ ██╔══██║  ╚██╔╝  ██║     ██║   ██║██╔═══╝ ██╔══██║██╔══╝  ██╔══██╗██╔══╝
 #  ██║     ██║  ██║   ██║   ███████╗╚██████╔╝██║     ██║  ██║███████╗██║  ██║███████╗
 #  ╚═╝     ╚═╝  ╚═╝   ╚═╝   ╚══════╝ ╚═════╝ ╚═╝     ╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚══════╝
-#                                                                                    
-#                                      
+#
+#
 # PHYLOPHERE: A Nextflow pipeline including a complete set
 # of phylogenetic comparative tools and analyses for Phenome-Genome studies
 #
@@ -24,8 +24,8 @@
 
 /*
  * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- * Configuration file for setting up global parameters, process-specific resource requirements, 
- * and execution profiles. This ensures optimal resource allocation and flexibility across 
+ * Configuration file for setting up global parameters, process-specific resource requirements,
+ * and execution profiles. This ensures optimal resource allocation and flexibility across
  * different compute environments.
  * ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  */
@@ -41,9 +41,9 @@ params {
     ct_tool                     = ct_tool                   ?:  null  //"discovery,resample,bootstrap"
 
     // Common DISCOVERY and BOOTSTRAP options
-    alignment                   = alignment                 ?:  "$baseDir/Data/Primate_alignments"
+    alignment                   = alignment                 ?:  "$baseDir/Data/2.Alignments"
     disc_description            = disc_description          ?:  null
-    traitfile                   = traitfile                 ?:  "$baseDir/Data/CAAS_traitfiles/cal-hom.tab"
+    traitfile                   = traitfile                 ?:  "$baseDir/Data/6.CAAS_traitfiles/config-t3.tab"
     ali_format                  = ali_format                ?:  "phylip-relaxed"
     // clustal, emboss, fasta, fasta-m10, ig, maf, mauve, msf, nexus, phylip, phylip-sequential, phylip-relaxed, stockholm
     patterns                    = patterns                  ?:  "1,2,3,4"
@@ -51,12 +51,12 @@ params {
     maxfggaps                   = maxfggaps                 ?:  "NO"
     maxgaps                     = maxgaps                   ?:  "NO"
     maxgapsperposition          = maxgapsperposition        ?:  "0.5"
-    maxbgmiss                   = maxbgmiss                 ?:  "2"
-    maxfgmiss                   = maxfgmiss                 ?:  "2"
-    maxmiss                     = maxmiss                   ?:  "2"
+    maxbgmiss                   = maxbgmiss                 ?:  "NO"
+    maxfgmiss                   = maxfgmiss                 ?:  "NO"
+    maxmiss                     = maxmiss                   ?:  "NO"
 
     // RESAMPLE options
-    tree                       = tree                       ?:  "${baseDir}/Data/Phylo-233-GENOMES/science.abn7829_data_s4.nex.tree"
+    tree                       = tree                       ?:  "${baseDir}/Data/5.Phylogeny/science.abn7829_data_s4.nex.tree"
     strategy                   = strategy                   ?:  "FGBG"
     fgsize                     = fgsize                     ?:  "6"
     bgsize                     = bgsize                     ?:  "6"
@@ -64,19 +64,19 @@ params {
     bygroup                    = bygroup                    ?:  null
     traitvalues                = traitvalues                ?:  null
     cycles                     = cycles                     ?:  "500"
-    
+
     // BOOTSTRAP options
     resample_out               = resample_out               ?:  null
 
     // RERCONVERGE options
     // General options
     rer_tool                   = rer_tool                   ?:  "build_trait,continuous" //"build_trait, binary, continuous"
-    gene_trees                 = gene_trees                 ?:  "$baseDir/Data/Gene_trees/ALL_FEB23_geneTrees.txt"
-    my_traits                  = my_traits                  ?:  "$baseDir/Data/Neoplasia_species360/species360_primates_neoplasia_20230519.csv"
+    gene_trees                 = gene_trees                 ?:  "$baseDir/Data/3.Gene_trees/ALL_FEB23_geneTrees.txt"
+    my_traits                  = my_traits                  ?:  "$baseDir/Data/1.Cancer_data/clean_primate_traits.csv"
     traitname                  = traitname                  ?:  "neoplasia_prevalence" // How your traitcolumn is named in your dataset
-    trait_out                  = trait_out                  ?:  "$baseDir/Out/Phylophere/20231128_1633/wise_bardeen/RERConverge/RER_Traits/neoplasia_prevalence.polished.output"
-    trees_out                  = trees_out                  ?:  "$baseDir/Out/Phylophere/20231128_1633/wise_bardeen/RERConverge/RER_Objects/ALL_FEB23_geneTrees.txt.masterTree.output"
-    matrix_out                 = matrix_out                 ?:  "$baseDir/Out/Phylophere/20231128_2322/naughty_bohr/RERConverge/RER_Objects/neoplasia_prevalence.RERmatrix.output"
+    trait_out                  = trait_out                  ?:  "$baseDir/Data/7.RER_objects/RER_Traits/neoplasia_prevalence.polished.output"
+    trees_out                  = trees_out                  ?:  "$baseDir/Data/7.RER_objects/RER_Results/neoplasia_prevalence.continuous.output"
+    matrix_out                 = matrix_out                 ?:  "$baseDir/Data/7.RER_objects/RER_Objects/neoplasia_prevalence.RERmatrix.output"
 
     // Continuous analysis options
     rer_minsp                  = rer_minsp                  ?: "10"
@@ -87,7 +87,7 @@ params {
 
 
     // ORA (not working aon)
-    // ora                        = ora                        ?: "GO-CC,GO-BP,GO-MF,KEGG,DO,DGN,REACTOME,WP,NCG"
+    // ora                        = ora                     ?: "GO-CC,GO-BP,GO-MF,KEGG,DO,DGN,REACTOME,WP,NCG"
     // ora_plots                  = false
     // You can choose between GO-CC, GO-BP, GO-MF, KEGG, DO, DGN, REACTOME, WP, NCG
 
