--- a/conf/base.config
+++ b/conf/base.config
@@ -5,12 +5,12 @@
 #
 #  ██████╗ ██╗  ██╗██╗   ██╗██╗      ██████╗ ██████╗ ██╗  ██╗███████╗██████╗ ███████╗
 #  ██╔══██╗██║  ██║╚██╗ ██╔╝██║     ██╔═══██╗██╔══██╗██║  ██║██╔════╝██╔══██╗██╔════╝
-#  ██████╔╝███████║ ╚████╔╝ ██║     ██║   ██║██████╔╝███████║█████╗  ██████╔╝█████╗  
-#  ██╔═══╝ ██╔══██║  ╚██╔╝  ██║     ██║   ██║██╔═══╝ ██╔══██║██╔══╝  ██╔══██╗██╔══╝  
+#  ██████╔╝███████║ ╚████╔╝ ██║     ██║   ██║██████╔╝███████║█████╗  ██████╔╝█████╗
+#  ██╔═══╝ ██╔══██║  ╚██╔╝  ██║     ██║   ██║██╔═══╝ ██╔══██║██╔══╝  ██╔══██╗██╔══╝
 #  ██║     ██║  ██║   ██║   ███████╗╚██████╔╝██║     ██║  ██║███████╗██║  ██║███████╗
 #  ╚═╝     ╚═╝  ╚═╝   ╚═╝   ╚══════╝ ╚═════╝ ╚═╝     ╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚══════╝
-#                                                                                    
-#                                      
+#
+#
 # PHYLOPHERE: A Nextflow pipeline including a complete set
 # of phylogenetic comparative tools and analyses for Phenome-Genome studies
 #
@@ -34,8 +34,8 @@ process {
 
     // TODO nf-core: Check the defaults for all processes
     cpus   = { check_max( 1,                     'cpus'   ) }
-    memory = { check_max( 100.MB , 'memory' ) }
-    time   = { check_max( 1.h  ,   'time'   ) }
+    memory = { check_max( 100.MB, 'memory' ) }
+    time   = { check_max( 1.h,   'time'   ) }
 
     // Process-specific resource requirements
     // NOTE - Please try and re-use the labels below as much as possible.
@@ -47,29 +47,29 @@ process {
 
     withLabel:process_single {
         cpus   = { check_max( 1,                        'cpus'    ) }
-        memory = { check_max( 100.MB ,    'memory'  ) }
-        time   = { check_max( 1.h  ,      'time'    ) }
+        memory = { check_max( 100.MB,    'memory'  ) }
+        time   = { check_max( 1.h,      'time'    ) }
     }
     withLabel:process_low {
-        cpus   = { check_max( 2     , 'cpus'    ) }
-        memory = { check_max( 12.GB , 'memory'  ) }
-        time   = { check_max( 4.h   , 'time'    ) }
+        cpus   = { check_max( 2, 'cpus'    ) }
+        memory = { check_max( 8.GB, 'memory'  ) }
+        time   = { check_max( 4.h, 'time'    ) }
     }
     withLabel:process_medium {
-        cpus   = { check_max( 6     , 'cpus'    ) }
-        memory = { check_max( 36.GB , 'memory'  ) }
-        time   = { check_max( 8.h   , 'time'    ) }
+        cpus   = { check_max( 6, 'cpus'    ) }
+        memory = { check_max( 16.GB, 'memory'  ) }
+        time   = { check_max( 12.h, 'time'    ) }
     }
     withLabel:process_high {
-        cpus   = { check_max( 12    , 'cpus'    ) }
-        memory = { check_max( 72.GB , 'memory'  ) }
-        time   = { check_max( 16.h  , 'time'    ) }
+        cpus   = { check_max( 12, 'cpus'    ) }
+        memory = { check_max( 32.GB, 'memory'  ) }
+        time   = { check_max( 16.h, 'time'    ) }
     }
     withLabel:process_long {
-        time   = { check_max( 20.h  , 'time'    ) }
+        time   = { check_max( 20.h  * task.attempt, 'time'    ) }
     }
     withLabel:process_high_memory {
-        memory = { check_max( 200.GB , 'memory' ) }
+        memory = { check_max( 200.GB * task.attempt, 'memory' ) }
     }
     withLabel:error_ignore {
         errorStrategy = 'ignore'
