--- a/nextflow.config
+++ b/nextflow.config
@@ -57,7 +57,8 @@ params {
 
     // RESAMPLE options
     tree                       = tree                       ?:  "$baseDir/Data/5.Phylogeny/science.abn7829_data_s4.nex.tree"
-    strategy                   = strategy                   ?:  "FGBG"
+    strategy                   = strategy                   ?:  "BM"
+    perm_strategy              = perm_strategy              ?:  "phylogeny"
     fgsize                     = fgsize                     ?:  "6"
     bgsize                     = bgsize                     ?:  "6"
     template                   = template                   ?:  null
