froze pkg ver anaconda

--- a/Docker/env.yml
+++ b/Docker/env.yml
@@ -1,14 +1,14 @@
-name: caastools
+name: phylophere
 channels:
     - conda-forge
     - defaults
     - bioconda
 dependencies:
-    - conda-forge::numpy
-    - conda-forge::scipy
+    - conda-forge::numpy=2.0.0
+    - conda-forge::scipy=1.14.0
     - conda-forge::biopython=1.79
-    - bioconda::dendropy
+    - bioconda::dendropy=5.0.1
     - conda-forge::r-ape=5.8
-    - conda-forge::geiger
+    - conda-forge::r-geiger=2.0.11
 
     # Down here should go all the different modules for the ORA analysis
