--- a/Docker/env.yml
+++ b/Docker/env.yml
@@ -4,11 +4,17 @@ channels:
     - defaults
     - bioconda
 dependencies:
+    # General use libraries
+    - conda-forge::pandas=2.2.2
     - conda-forge::numpy=2.0.0
     - conda-forge::scipy=1.14.0
     - conda-forge::biopython=1.79
     - bioconda::dendropy=5.0.1
+    # Required for BM resampling
     - conda-forge::r-ape=5.8
     - conda-forge::r-geiger=2.0.11
-
+    # Required for aligment preprocessing
+    - bioconda::bmge=1.12
+    - bioconda::macse=2.07
+    - conda-forge::requests=2.32.3
     # Down here should go all the different modules for the ORA analysis
