--- a/conf/modules.config
+++ b/conf/modules.config
@@ -54,9 +54,9 @@ process {
         
         // Define publish directory and saving conditions
         publishDir = [
-            path: { "${params.outdir}/CT/discovery/${traitFolder1DirUp}/${traitFileName}" },
+            path: { "${params.outdir}/discovery" },
             // I want to dinamically change copy/move ifelse discovery is the only process run
-	    mode: 'move',
+	    mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
@@ -69,7 +69,7 @@ process {
         
         // Define publish directory and saving conditions
         publishDir = [
-            path: { "${params.outdir}/CT/resample/${traitFolder1DirUp}/${traitFileName}" },
+            path: { "${params.outdir}/resample" },
             mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -91,8 +91,8 @@ process {
         
         // Define publish directory and saving conditions
         publishDir = [
-            path: { "${params.outdir}/CT/bootstrap/${traitFolder1DirUp}/${traitFileName}" },
-            mode: 'move',
+            path: { "${params.outdir}/bootstrap" },
+            mode: 'copy',
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
