--- a/nextflow.config
+++ b/nextflow.config
@@ -76,7 +76,7 @@ params {
 
     // RERCONVERGE options
     // General options
-    rer_tool                   = rer_tool                   ?:  "build_trait, build_tree, build_matrix, binary, continuous"
+    rer_tool                   = rer_tool                   ?:  "build_trait, build_tree, build_matrix, binary, continuous" // No binary AON
     gene_trees                 = gene_trees                 ?:  "$baseDir/Data/Gene_trees/geneTrees.txt"
     my_traits                  = my_traits                  ?:  "$baseDir/Data/Cancer_data/traits.csv"      // Must be a csv file with the specified columns present
     traitname                  = traitname                  ?:  "trait"                      // How your traitcolumn is named in your dataset
@@ -90,7 +90,7 @@ params {
     winsorizeRER               = winsorizeRER               ?: "3"
     winsorizeTrait             = winsorizeTrait             ?: "3"
 
-    // ORA (not working aon)
+    // ORA (not working AON)
     // ora                        = ora                        ?: "GO-CC,GO-BP,GO-MF,KEGG,DO,DGN,REACTOME,WP,NCG"
     // ora_plots                  = false
     // You can choose between GO-CC, GO-BP, GO-MF, KEGG, DO, DGN, REACTOME, WP, NCG
