--- a/conf/base.config
+++ b/conf/base.config
@@ -31,12 +31,6 @@
  */
 
 process {
-
-    // TODO nf-core: Check the defaults for all processes
-    cpus   = { check_max( 1,                     'cpus'   ) }
-    memory = { check_max( 100.MB, 'memory' ) }
-    time   = { check_max( 1.h,   'time'   ) }
-    errorStrategy = 'terminate' 
     // Process-specific resource requirements
     // NOTE - Please try and re-use the labels below as much as possible.
     //        These labels are used and recognised by default in DSL2 files hosted on nf-core/modules.
@@ -45,31 +39,22 @@ process {
     // TODO nf-core: Customise requirements for specific processes.
     // See https://www.nextflow.io/docs/latest/config.html#config-process-selectors
 
-    withLabel:process_single {
-        cpus   = { check_max( 1,                        'cpus'    ) }
+    withLabel:process_discovery {
+        cpus   = { check_max( 1,         'cpus'    ) }
         memory = { check_max( 100.MB,    'memory'  ) }
-        time   = { check_max( 1.h,      'time'    ) }
+        time   = { check_max( 1.h,       'time'    ) }
+        maxForks   = 32 //Number of parallel jobs to run. Should be total assigned cores % cores per job
     }
-    withLabel:process_low {
-        cpus   = { check_max( 2, 'cpus'    ) }
+    withLabel:process_resample {
+        cpus   = { check_max( 32, 'cpus'    ) }
         memory = { check_max( 8.GB, 'memory'  ) }
-        time   = { check_max( 4.h, 'time'    ) }
-    }
-    withLabel:process_medium {
-        cpus   = { check_max( 6, 'cpus'    ) }
-        memory = { check_max( 16.GB, 'memory'  ) }
         time   = { check_max( 12.h, 'time'    ) }
     }
-    withLabel:process_high {
-        cpus   = { check_max( 12, 'cpus'    ) }
-        memory = { check_max( 32.GB, 'memory'  ) }
-        time   = { check_max( 16.h, 'time'    ) }
-    }
-    withLabel:process_long {
-        time   = { check_max( 20.h  * task.attempt, 'time'    ) }
-    }
-    withLabel:process_high_memory {
-        memory = { check_max( 200.GB * task.attempt, 'memory' ) }
+    withLabel:process_boot {
+        cpus   = { check_max( 2, 'cpus'    ) }
+        memory = { check_max( 2.GB, 'memory'  ) }
+        time   = { check_max( 72.h, 'time'    ) }
+        maxForks   = 16 //Number of parallel jobs to run. Should be total assigned cores % cores per job
     }
     withLabel:error_ignore {
         errorStrategy = 'ignore'
