refined recodin plus debug flags

--- a/Docker/env.yml
+++ b/Docker/env.yml
@@ -1,22 +1,17 @@
-name: phylophere
+name: ct
 channels:
-    - conda-forge
-    - defaults
-    - bioconda
+  - bioconda
+  - conda-forge
 dependencies:
-    # General use libraries
-    - conda-forge::pandas=2.2.2
-    - conda-forge::numpy=2.0.0
-    - conda-forge::scipy=1.14.0
-    - conda-forge::biopython=1.79
-    - bioconda::dendropy=5.0.1
-    # Required for BM resampling
-    - conda-forge::r-ape=5.8
-    - conda-forge::r-geiger=2.0.11
-    - conda-forge::r-dplyr=1.1.4
-    - conda-forge::r-tibble=3.3.0
-    - conda-forge::r-readr=2.1.5
-    # Required for aligment preprocessing
-    - bioconda::bmge=1.12
-    - bioconda::macse=2.07
-    - conda-forge::requests=2.32.3
+  - biopython
+  - dendropy
+  - numpy
+  - r-ape
+  - r-dplyr
+  - r-geiger
+  - r-readr
+  - r-tibble
+  - scipy
+  - setuptools
+
+prefix: "/home/mramon/micromamba/envs/ct"
