--- a/nextflow.config
+++ b/nextflow.config
@@ -73,11 +73,14 @@ params {
     traitvalues                = traitvalues                ?:  "TBD"                                   // If BM
     cycles                     = cycles                     ?:  "1000"                                  // Number of bootstrap cycles
     chunk_size                 = chunk_size                 ?:  "500"                                   // Cycles per output file (creates directory with multiple files)
+    include_b0                 = include_b0                 ?:  false                                    // Include b_0 (original trait configuration) in permulations
 
     // BOOTSTRAP options
     resample_out               = resample_out               ?:  null                                    // If resample has been run, specify directory (new default) or legacy single file for bootstrap-only runs
     progress_log               = progress_log               ?:  "none"                                  // Optional progress log file for bootstrap
     discovery_out              = discovery_out              ?:  "none"                                  // Optional discovery output; accepts directory with per-alignment outputs or legacy single file
+    export_groups              = export_groups              ?:  "none"                                  // Optional file for exporting detected groups per permulation
+    export_perm_discovery      = export_perm_discovery      ?:  "none"                                  // Optional file for per-permulation discovery-like output
 
     // RERCONVERGE options
     // General options
