fixed and simplified permulations

--- a/conf/rerconverge.config
+++ b/conf/rerconverge.config
@@ -14,3 +14,37 @@ params {
     winsorizeRER               = winsorizeRER               ?: "3" // Winsorization threshold for RER values
     winsorizeTrait             = winsorizeTrait             ?: "3" // Winsorization threshold for trait values
 }
+
+process {
+    withName: 'RER_TRAIT' {
+        publishDir = [
+            path: { "${params.outdir}/RERConverge/RER_Traits/" },
+            mode: 'copy',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'RER_TREES' {
+        publishDir = [
+            path: { "${params.outdir}/RERConverge/RER_Objects" },
+            mode: 'copy',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'RER_MATRIX' {
+        publishDir = [
+            path: { "${params.outdir}/RERConverge/RER_Objects" },
+            mode: 'copy',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'RER_CONT' {
+        publishDir = [
+            path: { "${params.outdir}/RERConverge/RER_Results" },
+            mode: 'copy',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+}
