--- a/conf/ct.config
+++ b/conf/ct.config
@@ -30,6 +30,7 @@ params {
     strategy                    = strategy                  ?: "BM" // Resampling strategy: "BM" (Brownian Motion) or "random"
     fgsize                      = fgsize                    ?: "6" // Foreground size (for strategy random)
     bgsize                      = bgsize                    ?: "6" // Background size (for strategy random)
+    perm_strategy               = perm_strategy             ?: "BM" // Permutation strategy: "FGBG" | "BM"
     traitvalues                 = traitvalues               ?: "TBD" // Path to trait values file (for strategy BM)
     cycles                      = cycles                    ?: "1000" // Number of resampling cycles
     chunk_size                  = chunk_size                ?: "500" // Max number of resampled groups per output file
@@ -42,4 +43,55 @@ params {
     //// Do not run these debug options unless needed and always check with very small number of cycles ////
     export_groups              = export_groups              ?: "none" // Path to export groups file (DEBUG)
     export_perm_discovery      = export_perm_discovery      ?: "none" // Path to export permuted discovery file (DEBUG)
+}
+
+process {
+    withName: 'DISCOVERY' {
+        ext.args = """--patterns ${params.patterns}
+        --max_bg_gaps ${params.maxbggaps}
+        --max_fg_gaps ${params.maxfggaps}
+        --max_gaps ${params.maxgaps}
+        --max_gaps_per_position ${params.maxgapsperposition}
+        --max_bg_miss ${params.maxbgmiss}
+        --max_fg_miss ${params.maxfgmiss}
+        --max_miss ${params.maxmiss}
+        ${params.paired_mode ? '--paired_mode' : ''}
+        ${params.miss_pair ? '--miss_pair' : ''}
+        --max_conserved ${params.max_conserved}
+        ${params.caap_mode ? '--caap_mode' : ''}"""
+        publishDir = [
+            path: { "${params.outdir}/discovery" },
+            mode: 'copy',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'RESAMPLE' {
+        ext.args = "--cycles ${params.cycles} --chunk_size ${params.chunk_size}"
+        publishDir = [
+            path: { "${params.outdir}/resample" },
+            mode: 'copy',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'BOOTSTRAP' {
+        ext.args = """--patterns ${params.patterns}
+        --max_bg_gaps ${params.maxbggaps}
+        --max_fg_gaps ${params.maxfggaps}
+        --max_gaps ${params.maxgaps}
+        --max_gaps_per_position ${params.maxgapsperposition}
+        --max_bg_miss ${params.maxbgmiss}
+        --max_fg_miss ${params.maxfgmiss}
+        --max_miss ${params.maxmiss}
+        ${params.paired_mode ? '--paired_mode' : ''}
+        ${params.miss_pair ? '--miss_pair' : ''}
+        --max_conserved ${params.max_conserved}
+        ${params.caap_mode ? '--caap_mode' : ''}"""
+        publishDir = [
+            path: { "${params.outdir}/bootstrap" },
+            mode: 'copy',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
 }
